@@ -1,3 +1,4 @@
+* Add buttons on stock move form & list
 * Allow to use view location on staging and draft moves
 * Add picking location on warehouse
 * Always compute expected quantity in inventory
